# dream-web

./: CMakeLists.txt  README.md
assets/qml/: App.qml  ArticleList.qml  Font.qml  Main.qml
qrc/: App.qml  ArticleList.qml  Main.qml
src/: main.cpp
src/http/: http.cpp  http.h
src/models/: videoListModel.cc  videoListModel.h
src/services/store/: store.cc  store.h
